# QChatClient

./: .gitignore  .gitmodules  CMakeLists.txt  DataPackage.h  README.md  connectserverwidget.cpp  connectserverwidget.h  connectserverwidget.ui  datapackage.h  loginwiget.cpp  loginwiget.h  loginwiget.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  network.cpp  network.h  process.py  registerwidget.cpp  registerwidget.h  registerwidget.ui  test.hpp  vcpkg.json  xmake.lua
include/: Logger.hpp  definition.hpp  networkEndinass.hpp  regexMatch.hpp  timer.hpp
src/: main.cpp
src/factory/: factory.cpp  factory.h  token.cpp  token.h
src/factory/abstractClass/: abstractRoom.hpp
src/login/: login.cpp  login.h
src/mainWindow/: baseMainWindow.cpp  baseMainWindow.h  mainWindow.cpp  mainWindow.h
src/manager/: dataManager.cpp  dataManager.h  manager.cpp  manager.h
src/messageBox/: messageBox.cpp  messageBox.h  messageBox.hpp
src/network/: dataPackage.cpp  dataPackage.h  network.cpp  network.h  package.cpp  package.h
src/register/: register.cpp  register.h
src/start/: start.cpp  start.h  startlabel.cpp  startlabel.h
